# bioCurator

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cagents.development.yaml  cagents.production.yaml  cagents.yaml  docker-compose.development.yml  docker-compose.memory.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.ideas/: biocurator_articles.md  biocurator_pr_roadmap.md  biocurator_prd.md
configs/: base.yaml  development.yaml  hybrid.yaml  production.yaml
docs/: PR2_REVIEW_SUMMARY.md  pr2-implementation-notes.md
docs/adr/: 0001-logging-and-config-foundation.md  0001-logging-and-configuration.md  0002-project-structure.md  0002-safety-architecture-and-controls.md  0003-local-model-optimization-and-quality-bridge.md  0005-memory-system-architecture.md  0006-agent-coordination-architecture.md  README.md
examples/: basic_workflow.py  safety_demo.py
scripts/: health_check.py  setup_memory.py  setup_venv.sh
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  config.py  coordinator.py  registry.py
src/config/: __init__.py  loader.py  schemas.py
src/coordination/: __init__.py  protocols.py  safety_coordinator.py  task_queue.py
src/health/: __init__.py  check.py  endpoints.py
src/logging/: __init__.py  context.py  structured.py
src/memory/: __init__.py  influx_client.py  interfaces.py  manager.py  neo4j_client.py  postgres_client.py  qdrant_client.py  redis_client.py
src/metrics/: __init__.py  prometheus.py
src/models/: __init__.py  ollama_client.py
src/monitoring/: __init__.py  agent_monitor.py
src/observability/: __init__.py  metrics.py
src/safety/: __init__.py  behavior_monitor.py  circuit_breaker.py  cost_tracker.py  event_bus.py  rate_limiter.py
src/tracing/: __init__.py  hooks.py
tests/: __init__.py  conftest.py
tests/agents/: __init__.py  test_base_agent.py  test_registry.py
tests/coordination/: __init__.py  test_task_queue.py
tests/integration/: test_app.py
tests/memory/: __init__.py  test_interfaces.py  test_memory_manager.py  test_redis_client.py
tests/unit/: __init__.py
tests/unit/config/: test_loader.py
tests/unit/health/: test_endpoints.py
tests/unit/metrics/: test_prometheus.py
